--- a/src/i18n/ua.json
+++ b/src/i18n/ua.json
@@ -45,7 +45,7 @@
     "packages": {
         "base": "Базовий",
         "melo": "Меломан",
-        "melo_plus": "Меломан+"
+        "meloplus": "Меломан+"
     },
     "footer": {
         "copyright": "Всі права захищено",
@@ -55,5 +55,23 @@
         "text_2": "Основи вебдизайну",
         "text_3": "від",
         "text_4": "Креативної практики"
+    },
+    "form": {
+        "title": "Слухайте дійсно якісну музику!",
+        "choose_text": "Обраний пакет: ",
+        "change": "Замінити",
+        "name_label": "Ваше ім’я",
+        "name_placeholder": "Петров Петро Петрович",
+        "email_label": "Ваш e-mail",
+        "agree": "Я згоден з ",
+        "conditions": " умовами надання сервісу",
+        "register": "Зареєструйтесь"
+    },
+    "check": {
+        "title": "Перевірка заповнених полів",
+        "agree": "Ви погодились з нашими",
+        "conditions": "умовами сервісу",
+        "return": "Повернутись до форми реєстрації",
+        "confirm": "Все вірно, підтвердити"
     }
 }
